--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Здравствуйте, {{ user.username }}!</h1>
+<h1>Здравствуйте, {{ current_user.full_name }}!</h1>
 {% for post in posts %}
 <div><p>{{ post.author.username }} выложил: <b>{{ post.body }}</b></p></div>
 {% endfor %}
