--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -12,6 +12,13 @@
             {% endfor %}
         </p>
         <p>
+            {{ form.full_name.label }}<br>
+            {{ form.full_name(size=64) }}<br>
+            {% for error in form.full_name.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
             {{ form.about.label }}<br>
             {{ form.about(rows=8, cols=32) }}<br>
             {% for error in form.about.errors %}
