--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Файл не найден</h1>
+    <h1>Страница не найдена</h1>
     <p><a href="{{ url_for('index') }}">На главную</a></p>
 {% endblock %}
