--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,6 +1,14 @@
 <table>
-  <tr valign="top">
-    <td><img src="{{ post.author.avatar(36) }}"></td>
-    <td>{{ post.author.full_name }} выложил:<br>{{ post.body }}</td>
-  </tr>
+    <tr valign="top">
+        <td><img src="{{ post.author.avatar(36) }}"></td>
+        <td>
+            <a href="{{ url_for('user', username=post.author.username) }}">
+                {{ post.author.full_name }}
+            </a>
+            выложил(а):<br>
+            <a href="{{ url_for('page', id=post.id) }}">
+                {{ post.name }}
+            </a>
+        </td>
+    </tr>
 </table>
