--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,12 @@
 {% block content %}
 <h1>Здравствуйте, {{ current_user.full_name }}!</h1>
 {% for post in posts %}
-<div><p>{{ post.author.username }} выложил: <b>{{ post.body }}</b></p></div>
+{% include '_post.html' %}
 {% endfor %}
+{% if prev_url %}
+<a href="{{ prev_url }}">Новые посты</a>
+{% endif %}
+{% if next_url %}
+<a href="{{ next_url }}">Старые посты</a>
+{% endif %}
 {% endblock %}
