--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -17,4 +17,10 @@
 {% for post in posts %}
 {% include '_post.html' %}
 {% endfor %}
+{% if prev_url %}
+<a href="{{ prev_url }}">Новые посты</a>
+{% endif %}
+{% if next_url %}
+<a href="{{ next_url }}">Старые посты</a>
+{% endif %}
 {% endblock %}
