--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,34 +2,71 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if title %}
-    <title>{{ title }}</title>
+    <title>{{ title }} - ПроОбразование</title>
     {% else %}
     <title>Добро пожаловать!</title>
     {% endif %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
 </head>
 <body>
-<div>ПроОбразование:
-    <a href="{{ url_for('index') }}">Домашняя страница</a>
-    <a href="{{ url_for('explore') }}">Поиск</a>
-    {% if current_user.is_anonymous %}
-    <a href="{{ url_for('login') }}">Вход</a>
-    {% else %}
-    <a href="{{ url_for('add_page') }}">Добавить статью</a>
-    <a href="{{ url_for('user', username=current_user.username) }}">Профиль</a>
-    <a href="{{ url_for('logout') }}">Выход</a>
-    {% endif %}
-</div>
-<hr>
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-<ul>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container">
+        <a class="navbar-brand" href="{{ url_for('index') }}">ПроОбразование</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{{ url_for('index') }}">Домашняя страница</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{{ url_for('explore') }}">Поиск</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav mb-2 mb-lg-0">
+                {% if current_user.is_anonymous %}
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{{ url_for('login') }}">Войти</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{{ url_for('add_page') }}">Добавить статью</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page"
+                       href="{{ url_for('user', username=current_user.username) }}">Профиль</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{{ url_for('logout') }}">Выйти</a>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container mt-3">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
     {% for message in messages %}
-    <li>{{ message }}</li>
+    <div class="alert alert-info" role="alert">{{ message }}</div>
     {% endfor %}
-</ul>
-{% endif %}
-{% endwith %}
-{% block content %}{% endblock %}
+    {% endif %}
+    {% endwith %}
+    {% block content %}{% endblock %}
+</div>
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous">
+</script>
+{{ moment.include_moment() }}
+{{ moment.lang('ru') }}
 </body>
 </html>
