--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -2,6 +2,6 @@
 {% import 'bootstrap_wtf.html' as wtf %}
 
 {% block content %}
-    <h1>Редактирование профиля</h1>
+    <h1>Сброс Вашего пароля</h1>
     {{ wtf.quick_form(form) }}
 {% endblock %}
