--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,29 +1,12 @@
 {% extends "base.html" %}
+{% import 'bootstrap_wtf.html' as wtf %}
 
 {% block content %}
 <h1>Вход</h1>
 <p>Новый пользователь? <a href="{{ url_for('register') }}">Нажмите, чтобы зарегистрироваться!</a></p>
-<form action="" method="post" novalidate>
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.username.label }}<br>
-        {{ form.username(size=32) }} <br>
-        {% for error in form.username.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.password.label }}<br>
-        {{ form.password(size=32) }} <br>
-        {% for error in form.password.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-    <p>
-        Забыли пароль?
-        <a href="{{ url_for('reset_password_request') }}">Нажмите для восстановления</a>
-    </p>
-    <p>{{ form.submit() }}</p>
-</form>
+{{ wtf.quick_form(form) }}
+<p>
+    Забыли пароль?
+    <a href="{{ url_for('reset_password_request') }}">Нажмите для восстановления</a>
+</p>
 {% endblock %}
