--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -3,7 +3,7 @@
 {% block content %}
 <table>
     <tr valign="top">
-        <td><img src="{{ user.avatar(128) }}"></td>
+        <td><img class="avatar" src="{{ user.avatar(128) }}"></td>
         <td>
             <h1>Пользователь: {{ user.full_name }}</h1>
             {% if user.about %}<p>{{ user.about }}</p>{% endif %}
