--- a/app/templates/bootstrap_wtf.html
+++ b/app/templates/bootstrap_wtf.html
@@ -15,6 +15,9 @@
 {%- elif field.type == 'SelectField' %}
 {{ field.label(class='form-label') }}
 {{ field(class='form-select mb-3') }}
+{%- elif field.type == 'SelectMultipleField' %}
+{{ field.label(class='form-label') }}
+{{ field(class='form-select mb-3') }}
 {%- elif field.type == 'TextAreaField' %}
 <div class="mb-3">
     {{ field.label(class='form-label') }}
