--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -17,7 +17,7 @@
 {% for post in posts %}
 {% include '_post.html' %}
 {% endfor %}
-<nav aria-label="Post navigation">
+<nav aria-label="Навигация">
     <ul class="pagination">
         <li class="page-item{% if not prev_url %} disabled{% endif %}">
             <a class="page-link" href="{{ prev_url }}">
