Upgraded SelectMultipleField Upgraded search page (/explore) Added badges as tags on pages Added file upload and download Upgraded logo Changed header links visibility

--- a/app/templates/add_page.html
+++ b/app/templates/add_page.html
@@ -3,5 +3,5 @@
 
 {% block content %}
     <h1>Добавление статьи</h1>
-    {{ wtf.quick_form(form) }}
+    {{ wtf.quick_form(form, enctype="multipart/form-data") }}
 {% endblock %}
