--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -27,12 +27,16 @@ body {
 
 .container {
     width: 80%;
-    margin: auto;
     overflow: hidden;
     flex: 1; /* Позволяет контейнеру расширяться, занимая доступное пространство */
 }
 
 /* Шапка */
+.logo {
+    width: 3em;
+    height: 3em;
+}
+
 .header {
     background: var(--color-primary-bg);
     color: var(--color-primary-text);
@@ -73,7 +77,6 @@ header li {
 header a {
     color: var(--color-primary-text);
     text-decoration: none;
-    text-transform: uppercase;
     font-size: 16px;
 }
 
@@ -94,6 +97,13 @@ img.avatar {
     border-radius: 50%;
     border: 2px solid var(--color-accent);
     box-shadow: 0 0 5px var(--color-shadow);
+}
+
+/* Кастомный badge */
+.badge-custom {
+    background-color: var(--color-accent);
+    color: var(--color-card-bg);
+    font-size: 1em;
 }
 
 /* Ссылки в таблице */
@@ -159,6 +169,85 @@ td {
 
 .btn:hover {
     background: var(--color-primary-bg);
+}
+
+.btn:active {
+    background: var(--color-accent) !important;
+}
+
+.custom-select-multiple .select-container {
+    position: relative;
+    border: 1px solid var(--color-primary-bg);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.custom-select-multiple .selected-options-container {
+    padding: 8px 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.custom-select-multiple .selected-options-text {
+    flex-grow: 1;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.custom-select-multiple .select-arrow {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid var(--color-body-text);
+    margin-left: 5px;
+}
+
+.custom-select-multiple .form-select {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    opacity: 0;
+    padding: 0;
+    margin: -1px;
+    border: none;
+    pointer-events: none;
+}
+
+.custom-select-multiple .select-options {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background-color: var(--color-card-bg);
+    border: 1px solid var(--color-primary-bg);
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: none;
+    z-index: 1000;
+    box-shadow: 0 0.5rem 1rem var(--color-shadow);
+    max-height: 100px;
+    overflow-y: auto;
+}
+
+.custom-select-multiple .select-options li {
+    padding: 8px 12px;
+    cursor: pointer;
+}
+
+.custom-select-multiple .select-options li:hover {
+    background-color: var(--color-body-bg);
+}
+
+.custom-select-multiple .select-options li.selected {
+    background-color: var(--color-accent);
+    color: var(--color-body-card);
 }
 
 /* Подвал */
