--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,15 +8,16 @@
     {% else %}
     <title>Добро пожаловать!</title>
     {% endif %}
+    <link rel="icon" href="/static/icon.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom header">
+<header class="d-flex flex-wrap align-items-center justify-content-center py-3 mb-4 border-bottom header">
     <a href="/"
        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none ms-5"
        style="background-color: var(--color-body-bg); border-radius: 0.5em; padding: 0.1em;">
-        <img src="static\\icon.png" alt="ПроОбразование" class="logo me-1">
+        <img src="/static/icon.png" alt="ПроОбразование" class="logo me-1">
         <span class="fs-4 me-1">
             <span style="color: var(--color-accent)">Про</span><span
                 style="color: var(--color-primary-bg)">Образование</span>
@@ -64,9 +65,9 @@
 <footer class="py-3">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link px-2">Главная</a></li>
-        <li class="nav-item"><a href="" class="nav-link px-2">Политика конфиденциальности</a></li>
-        <li class="nav-item"><a href="" class="nav-link px-2">FAQ</a></li>
-        <li class="nav-item"><a href="" class="nav-link px-2">О нас</a></li>
+        <li class="nav-item"><a href="{{ url_for('privacy_policy') }}" class="nav-link px-2">Политика конфиденциальности</a></li>
+        <li class="nav-item"><a href="{{ url_for('faq') }}" class="nav-link px-2">FAQ</a></li>
+        <li class="nav-item"><a href="{{ url_for('about_us') }}" class="nav-link px-2">О нас</a></li>
     </ul>
     <p class="text-center" style="color: var(--color-primary-text)">© 2025 Проект «ПроОбразование»</p>
 </footer>
