--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,10 @@
     {% endif %}
     <link rel="icon" href="/static/icon.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
@@ -65,7 +69,8 @@
 <footer class="py-3">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link px-2">Главная</a></li>
-        <li class="nav-item"><a href="{{ url_for('privacy_policy') }}" class="nav-link px-2">Политика конфиденциальности</a></li>
+        <li class="nav-item"><a href="{{ url_for('privacy_policy') }}" class="nav-link px-2">Политика
+            конфиденциальности</a></li>
         <li class="nav-item"><a href="{{ url_for('faq') }}" class="nav-link px-2">FAQ</a></li>
         <li class="nav-item"><a href="{{ url_for('about_us') }}" class="nav-link px-2">О нас</a></li>
     </ul>
@@ -156,6 +161,41 @@
         });
 
         updateSelectedOptions(); // Вызываем при инициализации
+    });
+</script>
+<script>
+    const passwordInput = document.querySelector('input[type="password"]');
+    const eyeIcon = document.createElement('i');
+    eyeIcon.classList.add('fa', 'fa-eye', 'password-eye');
+    passwordInput.parentNode.appendChild(eyeIcon);
+
+    eyeIcon.addEventListener('click', () => {
+      if (passwordInput.type === 'password') {
+        passwordInput.type = 'text';
+        eyeIcon.classList.remove('fa-eye');
+        eyeIcon.classList.add('fa-eye-slash');
+      } else {
+        passwordInput.type = 'password';
+        eyeIcon.classList.remove('fa-eye-slash');
+        eyeIcon.classList.add('fa-eye');
+      }
+    });
+</script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $('.searchable-select').each(function() {
+            var $this = $(this);
+            $this.select2({
+                theme: "bootstrap-5",
+                placeholder: "Начните вводить для поиска...",
+                allowClear: true
+            });
+
+            $this.next('.select2-container').addClass('mb-3');
+            $this.next('.select2-selection').addClass('form-select');
+        });
     });
 </script>
 {{ moment.include_moment() }}
